<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.ac.kaist.resl.gs1_car_manager.FirstFragment"
    android:background="@drawable/main_background_left"
    >

    <!--
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.constraint.ConstraintLayout> -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_atTheRepairShop"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="22dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="120dp" />

        <ImageButton
            android:id="@+id/imageButton_carRepairShop"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_carrepairshop_white_96dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"/>

        <View android:layout_height="2dip"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_carRepairShop"
            android:layout_marginTop="0dp"
            android:background="#FF909090"></View>

        <!-- android:background ="@color/colorPrimaryMedium" -->
<!-- selfRepair는 빼기로 결정
        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_selfRepair"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" />

        <ImageButton
            android:id="@+id/imageButton_selfRepair"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_selfrepair_black_96dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"/>
            -->

        <ImageButton
            android:id="@+id/imageButton_engineOil"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/ic_icon_engine_oil_white"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/imageButton_airConditioner"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/ic_icon_airconditioner_white"
            app:layout_constraintLeft_toRightOf="@+id/imageButton_engineOil"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/imageButton_battery"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/ic_icon_battery_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_engineOil"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/imageButton_tire"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/ic_icon_tire_white"
            app:layout_constraintLeft_toRightOf="@+id/imageButton_battery"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_airConditioner"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView_engineOil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_engineOil"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_engineOil"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textView_airConditioner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_airConditioner"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_airConditioner"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginLeft="184dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textView_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_battery"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_battery"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textView_tire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_tire"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_tire"
            app:layout_constraintLeft_toRightOf="parent"
            android:layout_marginLeft="214dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorWhite"/>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
